<resources>
    <string name="app_name">My Daily Diary</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notes">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="achievements">Achievements</string>
    <string name="skip_text">Skip</string>
    <string name="onboarding_description_1">Save your notes offline and online</string>
    <string name="onboarding_description_2">Сomfortable way to write all your activity</string>
    <string name="onboarding_description_3">Set goals and achieve achievements</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="add">Add</string>
    <string name="add_note">Add Note</string>
    <string name="add_notification">Add Notification</string>
    <string name="mood_choose">Choose your mood</string>
    <string name="your_notes">Your Notes</string>
    <string name="excellent_mood">EXCELLENT</string>
    <string name="good_mood">GOOD</string>
    <string name="normal_mood">NORMAL</string>
    <string name="sad_mood">SAD</string>
    <string name="awful_mood">AWFUL</string>
    <string name="sick_mood">SICK</string>
    <string name="angry_mood">ANGRY</string>
    <string name="demon_mood">DEMON</string>
    <string name="laughing_mood">LAUGHING</string>
    <string name="love_mood">LOVE</string>
    <string name="thinking_mood">THINKING</string>
    <string name="family">FAMILY</string>
    <string name="friends">FRIENDS</string>
    <string name="dating">DATING</string>
    <string name="party">PARTY</string>
    <string name="cinema">CINEMA</string>
    <string name="reading">READING</string>
    <string name="game">GAME</string>
    <string name="sport">SPORT</string>
    <string name="chilling">CHILLING</string>
    <string name="shopping">SHOPPING</string>
    <string name="cleaning">CLEANING</string>
    <string name="study">STUDY</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Settings</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="delete_note_dialog">Deleting</string>
    <string name="delete_question">"Do you really want to delete these elements"</string>
    <string name="selected">Selected :</string>
    <string name="user">User</string>
    <string name="login_successfull">Successfully signed in user</string>
    <string name="login_unsuccessfull">Sign in unsuccessful</string>
    <string name="set_data_to_firebase">Set Data to Firebase</string>
    <string name="get_data_from_firebase">Get Data from Firebase</string>
    <string name="log_out">Log Out</string>
    <string name="use_firebase">Write to firebase immediately</string>
    <string name="rewrite_warning">Warning</string>
    <string name="firebase_rewrite_warning">You can loose your data, if you didn\'t synchronise it before.\nYou may synchronise data before. Continue?</string>
    <string name="yes">Yes</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="repeat_every_year">Repeat every Year</string>
    <string name="login">Login</string>
    <string name="notification_setted_to">Notification setted to</string>
    <string name="started_time_is">Started time is</string>
    <string name="avatar">Avatar</string>

</resources>