<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/action_bar">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="parent">

        <com.google.android.material.tabs.TabItem

            android:icon="@drawable/menu_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <com.google.android.material.tabs.TabItem

            android:icon="@drawable/calendar_month_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"/>

        <com.google.android.material.tabs.TabItem

            android:icon="@drawable/achievement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/ViewPager_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab">

    </androidx.viewpager2.widget.ViewPager2>
</androidx.constraintlayout.widget.ConstraintLayout>